--- a/components/css/popup.css
+++ b/components/css/popup.css
@@ -21,3 +21,29 @@ header {
     margin-bottom: 5px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
 }
+
+.app-name {
+    line-height: 60px;
+    margin-left: 55px;
+    margin-right: 15px;
+}
+
+footer {
+    margin-top: 5px;
+    border-top: 1px solid rgba(128, 128, 128, 0.2);
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#share_friends {
+    font-size: 10px;
+    text-align: center;
+}
+
+footer > div {
+    font-size: 12px;
+    color: grey;
+    text-align: center;
+}
+
+.jssocials-share-link { border-radius: 50%; }
