--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -12,9 +12,11 @@
 <body>
     <div class="container" style="min-width: 320px">
         <header>
-            <h3 class="pull-left app-name">Linkedin <sup class="text-danger">boost</sup></h3>
-            <img src="/components/img/christmas_tree.png" class="pull-left">
-            <div class="clearfix"></div>
+            <div class="center-block">
+                <h3 class="pull-left app-name">Linkedin <sup class="text-danger">boost</sup></h3>
+                <img src="/components/img/christmas_tree.png" class="pull-left">
+                <div class="clearfix"></div>
+            </div>
         </header>
 
         <div id="not_linkedin" class="hide-block">
