--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -140,6 +140,8 @@
                         <button data-add-contacts="100" class="btn btn-raised btn-success">100</button>
                         <button data-add-contacts="200" class="btn btn-raised btn-success">200</button>
                     </div>
+
+                    <p id="nothing_to_added" class="text-danger hide-block" data-translation="nothing_to_added"></p>
                 </div>
                 <div class="panel-footer">
                     <span data-translation="total_invited" class="text-grey"></span>
