added filter profile with photo

--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -121,6 +121,15 @@
                                         id="profession">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="issetPhoto" class="col-md-2 control-label" data-translation="have_avatar"></label>
+
+                            <div class="togglebutton pull-right">
+                                <label>
+                                    <input id="issetPhoto" type="checkbox" checked>
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
