--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -13,7 +13,7 @@
     <div class="container" style="min-width: 320px">
         <header>
             <div class="center-block">
-                <h3 class="pull-left app-name">Linkedin <sup class="text-danger">boost</sup></h3>
+                <h3 class="pull-left app-name"><sup class="text-danger">Linkens</sup></h3>
                 <div class="clearfix"></div>
             </div>
         </header>
