--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -13,8 +13,9 @@
     <div class="container" style="min-width: 320px">
         <header>
             <div class="center-block">
-                <h3 class="pull-left app-name"><sup class="text-danger">Linkens</sup></h3>
-                <div class="clearfix"></div>
+                <h3 class="text-danger app-name">
+                    Linkens
+                </h3>
             </div>
         </header>
 
@@ -34,13 +35,13 @@
                             <div class="mdl-stepper-bar-right"></div>
                         </div>
                         <div class="mdl-stepper-step active-step">
-                            <div class="mdl-stepper-circle pointer" data-link-url="https://www.linkedin.com/people/pymk?trk=nav_responsive_sub_nav_pymk">
+                            <div class="mdl-stepper-circle pointer" data-link-url="https://www.linkedin.com/mynetwork/">
                                 <i class="fa fa-user-plus" aria-hidden="true"></i>
                             </div>
                             <div class="mdl-stepper-title">
                                 <span data-translation="visit_special"></span>
                                 <span
-                                        data-link-url="https://www.linkedin.com/people/pymk?trk=nav_responsive_sub_nav_pymk"
+                                        data-link-url="https://www.linkedin.com/mynetwork/"
                                         class="link"
                                         data-translation="page"
                                 ></span>
@@ -64,14 +65,14 @@
                 <div class="mdl-card__supporting-text">
                     <div class="mdl-stepper-horizontal-alternative">
                         <div class="mdl-stepper-step active-step">
-                            <div data-link-url="https://www.linkedin.com/people/pymk?trk=nav_responsive_sub_nav_pymk"
+                            <div data-link-url="https://www.linkedin.com/mynetwork/"
                                  class="mdl-stepper-circle pointer">
                                 <i class="fa fa-user-plus" aria-hidden="true"></i>
                             </div>
                             <div class="mdl-stepper-title">
                                 <span data-translation="visit_special"></span>
                                 <span
-                                        data-link-url="https://www.linkedin.com/people/pymk?trk=nav_responsive_sub_nav_pymk"
+                                        data-link-url="https://www.linkedin.com/mynetwork/"
                                         class="link"
                                         data-translation="page"
                                 ></span>
