--- a/components/html/popup.html
+++ b/components/html/popup.html
@@ -16,6 +16,24 @@
                 <h3 class="text-danger app-name">
                     Linkens
                 </h3>
+
+                <div class="panel panel-info text-left" style="font-size: 10px">
+                    <div class="panel-heading" style="color: #fff">
+
+                            Dear Linkens User!
+                    </div>
+                    <div class="panel-body">
+                        <p>We are happy to announce Linkens 1.0 beta.</p>
+
+                        <p>Join our closed beta testing program and receive 1 month unlimited access to premium features after its public release.</p>
+
+                        <div class="text-center">
+                            <span data-link-url="http://bit.ly/2lMkHRk" class="btn btn-sm" style="margin: 0;background: #4caf50;color: #fff;">
+                                Join
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
 
